--- a/compass/dev/_styles.scss
+++ b/compass/dev/_styles.scss
@@ -335,6 +335,9 @@ main {
 				font-weight: 700;
 				margin: ($sectionMinHeight - 70)/2 auto 0;
 				font-size: 2.8125em;
+				@media all and (max-width: 370px){
+					font-size: 2.25em;
+				}
 				color:#fff;
 				display: block;
 			}
