--- a/public/css/style.css
+++ b/public/css/style.css
@@ -529,7 +529,13 @@ th {
   font-weight: bold;
   font-style: normal;
 }
-.placeholder, ::-webkit-input-placeholder {
+.placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: "Playfair Display", "Times New Roman", serif;
+  font-weight: 700;
+}
+
+::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.6);
   font-family: "Playfair Display", "Times New Roman", serif;
   font-weight: 700;
@@ -537,10 +543,22 @@ th {
 
 :-moz-placeholder {
   /* Firefox 18- */
+  color: rgba(255, 255, 255, 0.6);
+  font-family: "Playfair Display", "Times New Roman", serif;
+  font-weight: 700;
 }
 
 ::-moz-placeholder {
   /* Firefox 19+ */
+  color: rgba(255, 255, 255, 0.6);
+  font-family: "Playfair Display", "Times New Roman", serif;
+  font-weight: 700;
+}
+
+:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: "Playfair Display", "Times New Roman", serif;
+  font-weight: 700;
 }
 
 body {
@@ -1343,6 +1361,11 @@ main .wrapper section input[type='text'] {
   font-size: 2.8125em;
   color: #fff;
   display: block;
+}
+@media all and (max-width: 370px) {
+  main .wrapper section input[type='text'] {
+    font-size: 2.25em;
+  }
 }
 main .wrapper section input[type='text']:focus {
   outline: none;
